--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-Building Smileycoin
+Building Smileycoiin
 
 See doc/build-*.md for instructions on building smileycoind,
 the intended-for-services, no-graphical-interface, reference
